--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     <div class="container">
         <header>
             <img src="media/wv_readme_wordmark.png" alt="wordmark" class="logo">
-            <p class="subtitle">An <em>interactive</em> performance analysis tool</p>
+            <p class="subtitle">An <b>interactive</b> performance analysis tool</p>
         </header>
         <div class="social-icons">
-            <a href="https://ng-analytics.com"><img src="media/nga_icon_white.png" alt="NGA icon"></a>
-            <a href="https://github.com/NexGenAnalytics/WorkVisualizer"><img src="media/github_icon.png" alt="GitHub icon"></a>
-            <a href="https://www.linkedin.com/company/nexgenanalyticslc/"><img src="media/linkedin_icon.png" alt="LinkedIn icon"></a>
+            <a href="https://ng-analytics.com">
+                <img src="media/nga_icon_white.png" height="55px" width="55px" alt="NGA icon" class="nga-icon">
+            </a>
+            <a href="https://github.com/NexGenAnalytics/WorkVisualizer">
+                <img src="media/github_icon.png" height="40px" width="40px" alt="GitHub icon">
+            </a>
         </div>
+        <hr>
         <section class="content">
             <h2>Your Application’s Execution, <em>Visualized</em>.</h2>
             <ul>
@@ -25,6 +29,7 @@
                 <li>Are you <strong>wasting computer resources</strong> with inefficient code?</li>
                 <li>Are you <strong>wasting developer time</strong> searching for the problem?</li>
             </ul>
+            <hr>
             <div class="carousel">
                 <div class="carousel-item active">
                     <img src="media/analysis_viewer_slices.png" alt="Image 1">
