add favicon and revert formatting

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="media/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="media/favicon.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorkVisualizer</title>
     <link rel="stylesheet" href="styles.css">
