--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul>
                 <li>Is your parallel program <strong>losing time?</strong></li>
                 <li>Are some MPI ranks <strong>waiting on others?</strong></li>
-                <li>Are you <strong>wasting computer resources</strong> with inefficient code?</li>
+                <li>Are you <strong>wasting compute resources</strong> with inefficient code?</li>
                 <li>Are you <strong>wasting developer time</strong> searching for the problem?</li>
             </ul>
             <hr>
