add demo video to site

--- a/index.html
+++ b/index.html
@@ -24,13 +24,20 @@
         </div>
         <hr>
         <section class="content">
-            <h2>Your Application’s Execution, <em>Visualized</em>.</h2>
-            <ul>
-                <li>Is your parallel program <strong>losing time?</strong></li>
-                <li>Are some MPI ranks <strong>waiting on others?</strong></li>
-                <li>Are you <strong>wasting compute resources</strong> with inefficient code?</li>
-                <li>Are you <strong>wasting developer time</strong> searching for the problem?</li>
-            </ul>
+            <div class="video-section">
+                <div class="text-container">
+                    <h2>Your Application’s Execution, <em>Visualized</em>.</h2>
+                    <ul>
+                        <li>Is your parallel program <strong>losing time?</strong></li>
+                        <li>Are some MPI ranks <strong>waiting on others?</strong></li>
+                        <li>Are you <strong>wasting compute resources</strong> with inefficient code?</li>
+                        <li>Are you <strong>wasting developer time</strong> searching for the problem?</li>
+                    </ul>
+                </div>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=of9SjCil-yw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
             <hr>
             <div class="carousel">
                 <div class="carousel-item">
