--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </ul>
                 </div>
                 <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=of9SjCil-yw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/of9SjCil-yw?si=8cCV1oJWy7ftLguX" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </div>
             <hr>
