add full walkthrough video

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header>
             <img src="media/wv_readme_wordmark.png" alt="wordmark" class="logo">
-            <p class="subtitle">An <b>interactive</b> performance analysis tool</p>
+            <p class="subtitle">High-level, interactive, visual performance analysis <br> for High-Performance Computing (HPC)</p>
         </header>
         <div class="social-icons">
             <a href="https://ng-analytics.com">
@@ -35,7 +35,7 @@
                     </ul>
                 </div>
                 <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/of9SjCil-yw?si=8cCV1oJWy7ftLguX" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/of9SjCil-yw?si=8cCV1oJWy7ftLguX" title="Executive Summary" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </div>
             <hr>
@@ -54,6 +54,15 @@
                 </div>
                 <button class="carousel-control prev" onclick="prevSlide()">&#10094;</button>
                 <button class="carousel-control next" onclick="nextSlide()">&#10095;</button>
+            </div>
+            <hr>
+            <div class="demo-video">
+                <p class="standard">For more information, please see our walkthrough demonstration video of the current features implemented in the WorkVisualizer.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QXzInmC8I2U?si=lSjNLRcRavxuWN0_" title="WorkVisualizer Walkthrough Demonstration" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <hr>
+            <div class="footer">
+                <p><i>Questions? info@ng-analytics.com</i></p>
             </div>
         </section>
     </div>
