--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header>
             <img src="media/wv_readme_wordmark.png" alt="wordmark" class="logo">
-            <p class="subtitle">High-level, interactive, visual performance analysis <br> for High-Performance Computing (HPC)</p>
+            <p class="subtitle">High-level, interactive, visual performance analysis for High-Performance Computing (HPC)</p>
         </header>
         <div class="social-icons">
             <a href="https://ng-analytics.com">
