add credits to web page

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             </div>
             <hr>
             <div class="footer">
+                <p class="standard">The WorkVisualizer 1.0.0-alpha was supported by the U.S. Department of Energy, Office of Science, Office of Advanced Scientific Computing Research through the Small Business Innovation Research (SBIR) Program, under SBIR Phase I Award DE-SC-0024832.</p>
                 <p><i>Questions? info@ng-analytics.com</i></p>
             </div>
         </section>
